--- a/META.yml
+++ b/META.yml
@@ -1,30 +1,30 @@
---- #YAML:1.0
-name:               DynGig-RCE
-version:            1.00
-abstract:           Remote Code Execution
+---
+abstract: 'Remote Code Execution'
 author:
-    - Kan Liu <kan@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Kan Liu <kan@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Carp:               0
-    Compress::Zlib:     0
-    DynGig::Util:       1
-    File::Spec:         0
-    Socket:             0
-    Sys::Hostname:      0
-    Test::More:         0
-    Thread::Semaphore:  2.12
-    YAML::XS:           0.38
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: DynGig-RCE
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Carp: 0
+  Compress::Zlib: 0
+  DynGig::Util: 1
+  File::Spec: 0
+  Socket: 0
+  Sys::Hostname: 0
+  Test::More: 0
+  Thread::Semaphore: 2.12
+  YAML::XS: 0.38
+version: 1.01
